// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-1civgmb {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-7o2an9 {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-tjrecv {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-16r4i0r {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-16r4i0r:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-16r4i0r[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1ywhivs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-okwmur {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1mmk557 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1mmk557:hover {
  background-color: #d9dadd;
}

.cache-1mmk557:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1mmk557:focus-within,
.cache-1mmk557:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1mmk557[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1mmk557[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1mmk557[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1mmk557[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1mmk557[data-checked='true']:focus-within,
.cache-1mmk557[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mmk557[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1mmk557[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-p9zju0[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-1civgmb ehpbis70"
    >
      <fieldset
        class="cache-7o2an9 e1qvneex1"
      >
        <div
          class="cache-tjrecv ehpbis70"
        >
          <legend
            class="cache-tjeurz e13y3mga0"
          >
            Label 
          </legend>
          <div
            class="cache-1t7ypwa ehpbis70"
          >
            <label
              aria-disabled="false"
              class="cache-16r4i0r e1wstm610"
            >
              <div
                class="cache-1ywhivs ehpbis70"
              >
                <div
                  class="cache-okwmur e3f5lzv0"
                >
                  value 1
                </div>
              </div>
              <div
                class="cache-1mmk557 e1wstm612"
                data-checked="false"
                data-disabled="false"
              >
                <input
                  aria-checked="false"
                  class="cache-p9zju0 e1wstm611"
                  id=":r1:"
                  name="Group.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="cache-16r4i0r e1wstm610"
            >
              <div
                class="cache-1ywhivs ehpbis70"
              >
                <div
                  class="cache-okwmur e3f5lzv0"
                >
                  value 1
                </div>
              </div>
              <div
                class="cache-1mmk557 e1wstm612"
                data-checked="true"
                data-disabled="false"
              >
                <input
                  aria-checked="true"
                  class="cache-p9zju0 e1wstm611"
                  id=":r3:"
                  name="Group.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;

exports[`GroupField should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  .cache-1civgmb {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-7o2an9 {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-tjrecv {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-vesylc-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
  vertical-align: super;
}

.cache-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-16r4i0r {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-16r4i0r:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-16r4i0r[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1ywhivs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-okwmur {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1mmk557 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1mmk557:hover {
  background-color: #d9dadd;
}

.cache-1mmk557:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1mmk557:focus-within,
.cache-1mmk557:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1mmk557[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1mmk557[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1mmk557[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1mmk557[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1mmk557[data-checked='true']:focus-within,
.cache-1mmk557[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mmk557[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1mmk557[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-p9zju0[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-1civgmb ehpbis70"
    >
      <fieldset
        class="cache-7o2an9 e1qvneex1"
      >
        <div
          class="cache-tjrecv ehpbis70"
        >
          <legend
            class="cache-tjeurz e13y3mga0"
          >
            ToggleGroupField events 
            <svg
              class="e1qvneex0 cache-vesylc-sizeStyles e1gt4cfo0"
              viewBox="0 0 24 24"
            >
              <path
                d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
              />
            </svg>
          </legend>
          <div
            class="cache-1t7ypwa ehpbis70"
          >
            <label
              aria-disabled="false"
              class="cache-16r4i0r e1wstm610"
            >
              <div
                class="cache-1ywhivs ehpbis70"
              >
                <div
                  class="cache-okwmur e3f5lzv0"
                >
                  value 1
                </div>
              </div>
              <div
                class="cache-1mmk557 e1wstm612"
                data-checked="false"
                data-disabled="false"
              >
                <input
                  aria-checked="false"
                  class="cache-p9zju0 e1wstm611"
                  id=":r6:"
                  name="test.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="cache-16r4i0r e1wstm610"
            >
              <div
                class="cache-1ywhivs ehpbis70"
              >
                <div
                  class="cache-okwmur e3f5lzv0"
                >
                  value 1
                </div>
              </div>
              <div
                class="cache-1mmk557 e1wstm612"
                data-checked="false"
                data-disabled="false"
              >
                <input
                  aria-checked="false"
                  class="cache-p9zju0 e1wstm611"
                  id=":r8:"
                  name="test.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;
